AI chatbot created

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,7 +3,7 @@
     {
       "name": "Ferretti Yachts Database Construction",
       "description": "This project involved the construction of a database for Ferretti Yachts. The database was designed to store and manage information.",
-      "href": "https://games.digipen.edu/games/rapid-ride-fight",
+      "href": "https://www.ferrettigroup.com/en-us/Brands/Ferretti-yachts",
       "image": "/ferretti.png",
       "tags": [
         "MySQL",
