small edu modifications

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -64,7 +64,7 @@
     },
     {
       "name": "One Piece Baseball",
-      "description": "This game features an interface inspired by the anime ワンピース, allowing users to pitch, hit, and field their way to victory",
+      "description": "A baseball game inspired by One Piece, the most viewed anime of all time, letting players pitch, hit, and field their way to victory.",
       "href": "https://vigorous-panther-eb5.notion.site/One-Piece-Baseball-Screens-2622ba8dcdd880edaf05ed8a9684065f",
       "image": "/onepiecebaseball.png",
       "tags": [
