--- a/.github/workflows/chatbot-refresh.yml
+++ b/.github/workflows/chatbot-refresh.yml
@@ -10,9 +10,9 @@ jobs:
   refresh:
     runs-on: ubuntu-latest
     steps:
-      - name: Ping AstraDB Collection
+      - name: Ping AstraDB (List Keyspaces)
         run: |
           curl -s -o /dev/null -w "%{http_code}\n" \
             -H "X-Cassandra-Token: ${{ secrets.ASTRA_TOKEN }}" \
             -H "Content-Type: application/json" \
-            "https://${{ secrets.ASTRA_DB_ID }}-us-east-2.apps.astra.datastax.com/api/rest/v2/namespaces/default_keyspace/collections/${{ secrets.ASTRA_COLLECTION }}?page-size=1"
+            "https://${{ secrets.ASTRA_DB_ID }}-us-east-2.apps.astra.datastax.com/api/rest/v2/schemas/keyspaces"
