--- a/.github/workflows/chatbot-refresh.yml
+++ b/.github/workflows/chatbot-refresh.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Run every 12 hours
     - cron: "0 */12 * * *"
-  workflow_dispatch: # allows manual trigger
+  workflow_dispatch:
 
 jobs:
   ping-chatbot:
@@ -14,26 +14,16 @@ jobs:
         run: |
           echo "Run started at: $(date -u)"
 
-          # Send dummy message, capture output and status
-          RESPONSE=$(curl -s -L \
+          STATUS=$(curl -s -o /dev/null -L \
             --connect-timeout 5 \
             --max-time 10 \
-            -w "HTTPSTATUS:%{http_code}" \
+            -w "%{http_code}" \
             -X POST "https://connorhyatt.com/api/chat" \
             -H "Content-Type: application/json" \
-            -d '{"messages":[{"role":"user","content":"hello"}]}')
+            -d '{"messages":[{"role":"user","content":"ping"}]}')
 
-          # Split body and status
-          BODY=$(echo "$RESPONSE" | sed -e 's/HTTPSTATUS\:.*//')
-          STATUS=$(echo "$RESPONSE" | tr -d '\n' | sed -e 's/.*HTTPSTATUS://')
-
-          # Show logs
           echo "HTTP Status: $STATUS"
-          echo "Reply (first 200 chars):"
-          echo "$BODY" | head -c 200
-          echo ""
 
-          # Fail job if not 200
           if [ "$STATUS" -ne 200 ]; then
             echo "❌ Chatbot request failed with status $STATUS"
             exit 1
