--- a/.github/workflows/chatbot-refresh.yml
+++ b/.github/workflows/chatbot-refresh.yml
@@ -1,32 +1,21 @@
-name: Keep AstraDB Active
+name: Keep AstraDB Awake
 
 on:
   schedule:
-    # Run every 12 hours
-    - cron: "0 */12 * * *"
-  workflow_dispatch:
+    # Run twice daily at 6 AM and 6 PM UTC to prevent hibernation
+    - cron: '0 6,18 * * *'
+  workflow_dispatch: # Allows manual triggering from GitHub UI
 
 jobs:
-  ping-chatbot:
+  ping-astra:
     runs-on: ubuntu-latest
     steps:
-      - name: Send message to chatbot
+      - name: Ping AstraDB endpoint
         run: |
-          echo "Run started at: $(date -u)"
-
-          STATUS=$(curl -s -o /dev/null -L \
-            --connect-timeout 5 \
-            --max-time 10 \
-            -w "%{http_code}" \
-            -X POST "https://connorhyatt.com/api/chat" \
+          curl -X POST "https://connorhyatt.com/api/ping" \
             -H "Content-Type: application/json" \
-            -d '{"messages":[{"role":"user","content":"ping"}]}')
+            --fail --silent --show-error
+        continue-on-error: true
 
-          echo "HTTP Status: $STATUS"
-
-          if [ "$STATUS" -ne 200 ]; then
-            echo "❌ Chatbot request failed with status $STATUS"
-            exit 1
-          fi
-
-          echo "Run finished at: $(date -u)"
+      - name: Log ping attempt
+        run: echo "AstraDB ping completed at $(date)"
