--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:log": "next dev 2>&1 | tee -a dev-server.log",
     "build": "npm run gen && next build",
     "gen": "npx ts-node ./scripts/generate.ts",
     "start": "next start",
@@ -11,11 +12,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@datastax/astra-db-ts": "^1.4.1",
     "@hookform/resolvers": "^3.9.0",
-    "@langchain/community": "^0.3.57",
-    "@langchain/core": "^0.3.79",
-    "@langchain/openai": "^0.3.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -23,7 +20,6 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@upstash/redis": "^1.34.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "ai": "^3.4.33",
@@ -31,7 +27,6 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "gray-matter": "^4.0.3",
-    "langchain": "^0.3.2",
     "lucide-react": "^0.441.0",
     "next": "^14.2.12",
     "next-mdx-remote": "^5.0.0",
